<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Loading Image &#8230;</string>
    <string name="app_name">TennisBallCollector</string>
    <string name="liveimg">Live Image</string>
    <string name="uparrow">Up</string>
    <string name="downarrow">Down</string>
    <string name="leftarrow">Left</string>
    <string name="rightarrow">Right</string>
    <string name="pickdesc">Pick the Ball</string>
    <string name="pick">Pick</string>
    <string name="manualmode">auto</string>
    <string name="automode">AUTO</string>
    <string name="empty"></string>

</resources>