<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:padding="6dip">
	
    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
		android:id="@+id/textview"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/hello"
	/>

    <WebView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/VideoFrameView"
        android:layout_width="300dp"
        android:layout_height="210dp"
        android:padding="10dip" />
<!-- 
	<ImageView
        android:id="@+id/imgView"
        android:contentDescription="@string/liveimg"
        android:layout_width="300dp"
        android:layout_height="210dp"
        android:padding="10dip"
        android:scaleType="fitXY"
    />
-->	
	<ToggleButton 
	    android:id="@+id/mode"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:textOn="@string/automode"
	    android:textOff="@string/manualmode"
	    android:checked="false"
	    android:layout_margin="10dp"
	/>
	
 
    <LinearLayout 
        android:id="@+id/JoyStick"
        android:orientation="vertical"
       	android:layout_width="200dp"
       	android:layout_height="200dp"
       	android:layout_marginLeft="50dp"
       	>
       	<ImageButton 
       	   	android:id="@+id/upbutton"
       	   	android:contentDescription="@string/uparrow"
       	 	android:layout_width="60dp"
       	 	android:layout_height="60dp"
       	 	android:layout_marginLeft="70dp"
       	 	android:background="@drawable/uparrow"
       	 	android:onClick="upButtonAction"
       	 />
       	<LinearLayout
       	    android:orientation="horizontal"
       	    android:layout_width="match_parent"
       	    android:layout_height="60dp"
       	    >
       	    <ImageButton 
	       	   	android:id="@+id/leftbutton"
	       	   	android:contentDescription="@string/leftarrow"
	       	 	android:layout_width="60dp"
	       	 	android:layout_height="60dp"
	       	 	android:layout_marginLeft="10dp"
	       	 	android:background="@drawable/leftarrow"
       	 		android:onClick="leftButtonAction"
	       	 />
       	    <Button 
       	     	android:id="@+id/pick"
       	     	android:contentDescription="@string/pickdesc"
       	     	android:layout_width="60dp"
       	     	android:layout_height="60dp"
       	     	android:text="@string/pick"
       	     	android:padding="0dp"
       	     	android:layout_margin="0dp"
       	 		android:onClick="pickButtonAction"
       	     />
       	    <ImageButton 
	       	   	android:id="@+id/rightbutton"
	       	   	android:contentDescription="@string/rightarrow"
	       	 	android:layout_width="60dp"
	       	 	android:layout_height="60dp"
	       	 	android:layout_marginLeft="0dp"
	       	 	android:background="@drawable/rightarrow"
       	 		android:onClick="rightButtonAction"
	       	 />
       	</LinearLayout>
        <ImageButton 
       	   	android:id="@+id/downbutton"
       	   	android:contentDescription="@string/downarrow"
       	 	android:layout_width="60dp"
       	 	android:layout_height="60dp"
       	 	android:layout_marginLeft="70dp"
       	 	android:background="@drawable/downarrow"
       	 	android:onClick="downButtonAction"
       	 />
    </LinearLayout>
    
    
</LinearLayout>